Tables tabbable cells + outline treatment

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -782,34 +782,34 @@ Upload bar credentials, including certificate of good standing from highest cour
                                     <button type="button" id="closecontacts" class="close" data-target="#mydata2" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             </div>
                             <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn">
-                                <table class="list-group table">
+                                <table class="list-group table" role="grid" aria-label="contacts">
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear Form</a></td>
-                                    	<td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear Form</a></td>
+                                    	<td tabindex="0" class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                  	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
-                                        <td class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                     </tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
-                                        <td class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                   	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
-                                        <td class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                    	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
-                                        <td class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                     </tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
-                                        <td class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                   	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
-                                        <td class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
+                                    	<td tabindex="0" class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
+                                        <td tabindex="0" class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                    	</tr>
                                 </table>
                             </div>
