--- a/dashboard.html
+++ b/dashboard.html
@@ -127,39 +127,39 @@
                                                         </thead>
                                                         <tbody>
                                                           <tr>
-                                                            <td>87697840</td>
-                                                            <td>87697838</td>
-                                                            <td>Lynn Stanikmas</td>
-                                                            <td>Draft</td>
-                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">87697840</td>
+                                                            <td tabindex="0">87697838</td>
+                                                            <td tabindex="0">Lynn Stanikmas</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697248</td>
-                                                            <td>87587238</td>
-                                                            <td>Jacob Goldstein</td>
+                                                            <td tabindex="0">87697248</td>
+                                                            <td tabindex="0">87587238</td>
+                                                            <td tabindex="0">Jacob Goldstein</td>
                                                             <td>Completed</td>
-                                                            <td><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697840</td>
-                                                            <td>87697839</td>
-                                                            <td>Jackie Babos</td>
-                                                            <td>Draft</td>
-                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">87697840</td>
+                                                            <td tabindex="0">87697839</td>
+                                                            <td tabindex="0">Jackie Babos</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697899</td>
-                                                            <td>87693875</td>
-                                                            <td>Li Zhang</td>
-                                                            <td>Draft</td>
-                                                            <td><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">87697899</td>
+                                                            <td tabindex="0">87693875</td>
+                                                            <td tabindex="0">Li Zhang</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697294</td>
-                                                            <td>87697387</td>
-                                                            <td>Avo Reid</td>
-                                                            <td>Completed</td>
-                                                            <td><img src="images/Example3_shape.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">87697294</td>
+                                                            <td tabindex="0">87697387</td>
+                                                            <td tabindex="0">Avo Reid</td>
+                                                            <td tabindex="0">Completed</td>
+                                                            <td tabindex="0"><img src="images/Example3_shape.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
                                                           </tr>
                                                         </tbody>
                                                     </table>
@@ -192,85 +192,85 @@
                                                         </thead>
                                                         <tbody>
                                                           <tr>
-                                                            <td>87697840</td>
-                                                            <td>87697834</td>
-                                                            <td><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Lynn Stanikmas</td>
-                                                            <td>12/21/2019</td>
-                                                            <td>Abandoned</td>
-                                                            <td>Resubmit</td>
+                                                            <td tabindex="0">87697840</td>
+                                                            <td tabindex="0">87697834</td>
+                                                            <td tabindex="0"><img src="images/designwithtext_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Lynn Stanikmas</td>
+                                                            <td tabindex="0">12/21/2019</td>
+                                                            <td tabindex="0">Abandoned</td>
+                                                            <td tabindex="0">Resubmit</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697248</td>
-                                                            <td>87697235</td>
-                                                            <td><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Jacob Goldstein</td>
-                                                            <td>None</td>
-                                                            <td>Completed</td>
-                                                            <td>None</td>
+                                                            <td tabindex="0">87697248</td>
+                                                            <td tabindex="0">87697235</td>
+                                                            <td tabindex="0"><img src="images/stylized_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Jacob Goldstein</td>
+                                                            <td tabindex="0">None</td>
+                                                            <td tabindex="0">Completed</td>
+                                                            <td tabindex="0">None</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697899</td>
-                                                            <td>87697823</td>
-                                                            <td><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Li Zhang</td>
-                                                            <td>Draft</td>
-                                                            <td>Draft</td>
-                                                            <td>Filing Basis, Additional Information, Confirm and Pay</td>
+                                                            <td tabindex="0">87697899</td>
+                                                            <td tabindex="0">87697823</td>
+                                                            <td tabindex="0"><img src="images/coloronly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Li Zhang</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697840</td>
-                                                            <td>87697834</td>
-                                                            <td><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Lynn Stanikmas</td>
-                                                            <td>12/21/2019</td>
-                                                            <td>Abandoned</td>
-                                                            <td>Resubmit</td>
+                                                            <td tabindex="0">87697840</td>
+                                                            <td tabindex="0">87697834</td>
+                                                            <td tabindex="0"><img src="images/stylized_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Lynn Stanikmas</td>
+                                                            <td tabindex="0">12/21/2019</td>
+                                                            <td tabindex="0">Abandoned</td>
+                                                            <td tabindex="0">Resubmit</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697248</td>
-                                                            <td>87697235</td>
-                                                            <td><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Jacob Goldstein</td>
-                                                            <td>None</td>
-                                                            <td>Completed</td>
-                                                            <td>None</td>
+                                                            <td tabindex="0">87697248</td>
+                                                            <td tabindex="0">87697235</td>
+                                                            <td tabindex="0"><img src="images/adf-d-8-e-123-jpg.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Jacob Goldstein</td>
+                                                            <td tabindex="0">None</td>
+                                                            <td tabindex="0">Completed</td>
+                                                            <td tabindex="0">None</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697899</td>
-                                                            <td>87697823</td>
-                                                            <td><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Li Zhang</td>
-                                                            <td>Draft</td>
-                                                            <td>Draft</td>
-                                                            <td>Filing Basis, Additional Information, Confirm and Pay</td>
+                                                            <td tabindex="0">87697899</td>
+                                                            <td tabindex="0">87697823</td>
+                                                            <td tabindex="0"><img src="images/designonly_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Li Zhang</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697840</td>
-                                                            <td>87697834</td>
-                                                            <td><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Lynn Stanikmas</td>
-                                                            <td>12/21/2019</td>
-                                                            <td>Abandoned</td>
-                                                            <td>Resubmit</td>
+                                                            <td tabindex="0">87697840</td>
+                                                            <td tabindex="0">87697834</td>
+                                                            <td tabindex="0"><img src="images/designonly_alt2.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Lynn Stanikmas</td>
+                                                            <td tabindex="0">12/21/2019</td>
+                                                            <td tabindex="0">Abandoned</td>
+                                                            <td tabindex="0">Resubmit</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697248</td>
-                                                            <td>87697235</td>
-                                                            <td><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Jacob Goldstein</td>
-                                                            <td>None</td>
-                                                            <td>Completed</td>
-                                                            <td>None</td>
+                                                            <td tabindex="0">87697248</td>
+                                                            <td tabindex="0">87697235</td>
+                                                            <td tabindex="0"><img src="images/designwithtext_alt1.gif" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Jacob Goldstein</td>
+                                                            <td tabindex="0">None</td>
+                                                            <td tabindex="0">Completed</td>
+                                                            <td tabindex="0">None</td>
                                                           </tr>
                                                           <tr>
-                                                            <td>87697899</td>
-                                                            <td>87697823</td>
-                                                            <td><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
-                                                            <td>Li Zhang</td>
-                                                            <td>Draft</td>
-                                                            <td>Draft</td>
-                                                            <td>Filing Basis, Additional Information, Confirm and Pay</td>
+                                                            <td tabindex="0">87697899</td>
+                                                            <td tabindex="0">87697823</td>
+                                                            <td tabindex="0"><img src="images/Example2_shape_words.jpg" class="img-thumbnail" width="55" alt="Your mark"></td>
+                                                            <td tabindex="0">Li Zhang</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Draft</td>
+                                                            <td tabindex="0">Filing Basis, Additional Information, Confirm and Pay</td>
                                                           </tr>
                                                         </tbody>
                                                     </table>
